# genai_poc

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
app/: config.py  llm_factory.py  main.py
app/api/: routes.py
app/evaluation/: datasets.py  evaluator.py
app/generation/: generator.py  prompts.py
app/guardrails/: input_guard.py  output_guard.py
app/ingestion/: chunker.py  embedder.py  loaders.py  preprocessor.py
app/observability/: logger.py  tracing.py
app/pipeline/: graph.py
app/retrieval/: reranker.py  retriever.py  vector_store.py
data/raw/: langchain_chat_models.html  langchain_vectorstores.html  python_classes.html.html  python_controlflow.html.html  python_datastructures.html.html  python_errors.html.html  python_inputoutput.html.html  python_introduction.html.html  python_modules.html.html  python_stdlib.html.html  python_venv.html.html
eval/: golden_qa.json
scripts/: ingest.py  run_eval.py  scrape_docs.py
tests/: conftest.py  test_generation.py  test_guardrails.py  test_ingestion.py  test_pipeline.py  test_retrieval.py
ui/: app.py
